# BARIS

./: .gitignore  README.md  pyproject.toml  requirements-3d.txt  requirements.txt
baris/: chatter.py  dev.py  protocol.py  resolver.py  state.py
baris/client/: main.py  net.py  ui.py
baris/client/ui_overlay/: __init__.py  overlay.py  palette.py  panels.py  typography.py  widgets.py
baris/client3d/: app.py  character_model.py  interior_astro.py  interior_intel.py  interior_library.py  interior_mc.py  interior_museum.py  interior_rd.py  launch.py  main.py  overlay_host.py  panels_action.py  panels_info.py  text_utils.py
baris/server/: main.py
docs/: CANONICAL_AUDIT.md  CHECKS.md
tests/: conftest.py  test_e2e.py  test_overlay.py  test_resolver.py
